assets/stylesheets/features.scss
.features {

  position: relative;

  .list {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
    list-style: none;
    position: relative;
  }

  .background-image,
  .white-gutter-left,
  .white-gutter-right {
    height: 364px;
    position: absolute;
    pointer-events: none;
  }

  .background-image {
    background: url('/assets/iphone-6-frame.png') no-repeat 0 0;
    background-size: 250px 511px;
    width: 250px;
    left: 50%;
    margin-left: -125px;
    z-index: 100;
  }

  .white-gutter-left,
  .white-gutter-right{
    background-color: #fff;
    z-index: 90;
  }
  .white-gutter-left {
    left: 0;
    right: 50%;
    margin-right: 115px;
  }

  .white-gutter-right {
    right: 0;
    left: 50%;
    margin-left: 115px;

  }

  .features-list {
    margin: 40px auto 0 auto;
    overflow: hidden;
    width: 250px;
  }

  .feature-item {
    margin-top: 62px;
    text-align: center;
  }

  .feature-image {
    margin-left: auto;
    margin-right: auto;
    width: 220px;
    height: auto;
  }

  .content {
    height: 310px;
    background-color: #fff;
    position: relative;
    top: -140px;
    padding: 0 15px;
    overflow: hidden;
  }

  .feature-title,
  .para {
    font-family: 'Arco Perpetuo', 'Helvetica', 'Helvetica Neue', 'Arial', sans-serif;
    padding: 0;
    margin: 0;
  }

  .feature-title {
    font-size: 20px;
    margin-top: 90px;
  }

  .para {
    margin-top: 13px;
    font-size: 13px;
  }

  .nav-list {
    position: absolute;
    top: 306px;
    right: 0;
    left: 0;
    border-top: 1px solid #F0EEED;
    border-bottom: 1px solid #F0EEED;
    background-color: #fff;
    height: 76px;
    text-align: center;
    z-index: 300;
  }

  .nav-item {
    display: inline-block;
  }
  .nav-link {
    height: 57px;
    width: 54px;
    text-align: center;
    display: inline-block;
    padding-top: 20px;
    position: relative;
    top: 35px;
    opacity: 0;
    transition: all 0.3s ease;
    &.visible {
      top: 0;
      opacity: 1;
    }
  }
  svg {
    width: 35px;
    height: auto;
    border-bottom: 1px solid #f0eeed;
    padding-bottom: 21px;
    transition: border-color 0.3s ease;
  }

  .cls-1,
  .cls-2,
  .cls-3 {
    fill: #30262d;
    transition: fill 0.3s ease;
  }

  .nav-link.hover,
  .nav-link.selected {
    svg {
      border-color: #73cbca;
    }
    .cls-1,
    .cls-2,
    .cls-3 {
      fill: #73cbca;
    }
  }

}

@media (min-width: 768px) {
  .features {
    .background-image {
      width: 300px;
      background-size: 300px 613px;
      margin-left: -150px;
    }
    .white-gutter-left {
      margin-right: 140px;
    }
    .white-gutter-right {
      margin-left: 140px;
    }
    .features-list {
      width: auto;
    }
    .feature-item {
      margin-top: 74px;
    }
    .feature-image {
      width: 262px;
    }
    .content {
      width: 262px;
      margin-left: auto;
      margin-right: auto;
      padding: 0;
    }
    .feature-title {
      margin-top: 70px;
      font-size: 24px;
    }
    .para {
      font-size: 16px;
      margin-top: 16px;
    }
    .nav-list {
      top: 342px;
      height: 85px;
      max-width: 640px;
      margin-left: auto;
      margin-right: auto;
    }
    .nav-link {
      width: 120px;
      height: 65px;
    }
    svg {
      padding-bottom: 20px;
      width: 45px;
    }
  }
}

